--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,15 @@
 fastapi==0.104.1
-     uvicorn[standard]==0.24.0
-     sqlalchemy==2.0.23
-     pydantic==2.5.0
-     python-multipart==0.0.6
-     qrcode[pil]==7.4.2
-     psutil==5.9.6
-     PyYAML==6.0.1
-     python-jose[cryptography]==3.3.0
-     passlib[bcrypt]==1.7.4
-     aiofiles==23.2.1
+uvicorn[standard]==0.24.0
+sqlalchemy==2.0.23
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.1.1
+python-multipart==0.0.6
+python-dotenv==1.0.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
+requests==2.31.0
+psutil==5.9.6
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.25.2
