--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,45 @@
+# ==================== 基本配置 ====================
 PROJECT_NAME=ATLAS
 PROJECT_VERSION=1.0.0
 DEBUG=True
+
+# ==================== 数据库 ====================
 DATABASE_URL=sqlite:///./atlas.db
+# 生产环境使用 PostgreSQL:
+# DATABASE_URL=postgresql://atlas:password@localhost:5432/atlas
+
+# ==================== JWT 认证 ====================
 SECRET_KEY=your-secret-key-change-in-production-12345
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_DAYS=7
+
+# ==================== SMTP 邮件告警 ====================
+# Gmail 示例
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+
+# Outlook 示例
+# SMTP_SERVER=smtp-mail.outlook.com
+# SMTP_PORT=587
+# SMTP_USER=your-email@outlook.com
+# SMTP_PASSWORD=your-password
+
+# 企业邮箱示例
+# SMTP_SERVER=smtp.exmail.qq.com
+# SMTP_PORT=465
+# SMTP_USER=your-email@company.com
+# SMTP_PASSWORD=your-password
+
+# ==================== 系统路径 ====================
 CERTS_DIR=/opt/atlas/certs
 BACKUPS_DIR=/opt/atlas/backups
 LOGS_DIR=/opt/atlas/logs
+
+# ==================== Sing-box ====================
 SING_BOX_CONFIG_PATH=/etc/sing-box/config.json
+
+# ==================== Redis（可选）====================
+# REDIS_URL=redis://localhost:6379/0
+# REDIS_PASSWORD=your-redis-password
