--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,39 @@
+# ==================== Core Framework ====================
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+python-multipart==0.0.6
+
+# ==================== Database ====================
 sqlalchemy==2.0.23
+alembic==1.13.0
+
+# ==================== Authentication & Security ====================
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.1.1
-python-multipart==0.0.6
+pyotp==2.9.0
+
+# ==================== Configuration ====================
 python-dotenv==1.0.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
+
+# ==================== HTTP & Utilities ====================
 requests==2.31.0
+httpx==0.25.2
+
+# ==================== System Monitoring ====================
 psutil==5.9.6
+
+# ==================== Task Scheduling ====================
+apscheduler==3.10.4
+
+# ==================== Email & Notifications ====================
+python-multipart==0.0.6
+
+# ==================== Testing ====================
 pytest==7.4.3
 pytest-asyncio==0.21.1
-httpx==0.25.2
+
+# ==================== Optional: Production ====================
+gunicorn==21.2.0
